[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.61"
